# mmEissen.github.io

./: .gitignore  .travis.yml  README.md  build  index.html  makefile
.github/workflows/: publish.yml
_source/: conf.py  index.rst
_source/_static/: custom.css
_source/about/: resume.rst
_source/devblog/: 2018-11-07.rst
_source/notes/: Adafruit_GEMMA_M0.rst  ESP2866-01.rst  declarative_circuit.rst  logarithmic_addition.rst  resume.rst
_source/projects/: AirPixel.rst  load_projects.py
docs/: index.html
docs/1_about/: __index__.html
docs/2_projects/: __index__.html  dodecahedral_lamp.html  ethereality.html  infinite_void.html  vapourwave_umbrella.html
docs/3_blog/: __index__.html  blank.html
md_web_builder/: md_web_builder.py  pyproject.toml
md_web_builder/md_web_builder/: __main__.py  image_builder.py
page/: __index__.md  __template__.html  index.md
page/2_work/: ethereality.md
page/builds/: __index__.md  dodecahedral_lamp.md
page/home/: __index__.md
page/static/: styles.css
page/work/: ethereality.md  vapourwaver_umbrella.md
page_source/: #_index.md  CNAME  __template__.html
page_source/1_about/: __index__.md
page_source/2_projects/: __index__.md  dodecahedral_lamp.md  ethereality.md  vapourwave_umbrella.md
page_source/2_work/: __index__.md  dodecahedral_lamp.md
page_source/3_action/: __index__.md
page_source/3_blog/: blank.md
page_source/static/: styles.css
static/: styles.css
