[tool.poetry]
name = "md_web_builder"
version = "0.1.0"
description = ""
authors = ["Moritz Eissenhauer <moritz.eissenhauer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"
requests = "^2.25.1"
click = "^7.1.2"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
